# NBA-Detector

./: .gitignore  NBA_Detector_Colab.ipynb  README.md  analysis.py  config.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
NBA-Player-Detector-1/: README.dataset.txt  README.roboflow.txt
NBA-Player-Detector-1/test/: v01_28025_jpg.rf.a0388b703f94c9d70bc6d98daa6f643d.xml  v01_30090_jpg.rf.dcf3142cd2db761e2d1c40e89daecbe3.xml  v01_34515_jpg.rf.dffd8acebcbbed69cd701a708c4cc61a.xml
NBA-Player-Detector-1/train/: v01_16520_jpg.rf.cb868167d98d7e415d0acc4ded4ec9e4.xml  v01_19175_jpg.rf.61246fec37fb6ffc9411cead6646fe09.xml  v01_19470_jpg.rf.c4151373285d3b200c85c44317f5c26f.xml  v01_20060_jpg.rf.adfc2ec1cc4054d113037ec451e85ba2.xml  v01_22715_jpg.rf.73fafa2fc90677acb917c612dfde4f7f.xml  v01_23600_jpg.rf.bbfcf163ef69e468ea3c8a0590f021f9.xml  v01_23895_jpg.rf.cf648d0853a232273e070fb20138bf86.xml  v01_25075_jpg.rf.22c15880739dc98a3d1a6efb1e368f8b.xml  v01_25960_jpg.rf.4c8d62aabd2e3668a9b33fe1d31ff5a0.xml  v01_26255_jpg.rf.6bdc6e3b4ef524a6d1c0f756434e1066.xml  v01_26550_jpg.rf.357bf34979af4855373bece9dc6a4398.xml  v01_28910_jpg.rf.2e7abd9ea7fb28448bff2c901ed3c129.xml  v01_29205_jpg.rf.7cf3545183e85a96c0164ec1dbbf6e98.xml  v01_29795_jpg.rf.02ef7d676eb20641d28670917bd833a7.xml  v01_31270_jpg.rf.df9e470e1e67a9dabf3cf7fdf19053d9.xml  v01_33040_jpg.rf.958cf07e81e813e668538682270617fc.xml
NBA-Player-Detector-1/valid/: v01_17405_jpg.rf.a0f51cfcae3fda641921ebe1198f4645.xml  (+3 more)
tests/: test_create_model.py  test_dataloader.py  test_dataset.py  test_transformations.py
(+14 files in other folders)
